[gd_scene load_steps=32 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Tomato Spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Fonts/SHOWG.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Coin/coin1_16x16.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://DialogueMenu.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 28 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 208, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=27]
size = 100
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.643137, 0.643137, 0.643137, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=33]
size = 25
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=34]
size = 18
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 522, 307 )
script = ExtResource( 1 )

[node name="WalkAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 1
speed_scale = 1.3

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="Area2D" type="Area2D" parent="."]
z_index = 1

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -1.01584, -0.779061 )
scale = Vector2( 1.10759, 1.14826 )
polygon = PoolVector2Array( -28.8772, -24.5771, -37.9059, -14.1265, -41.5173, -2.80505, -40.6143, 8.51645, -32.4886, 18.9671, -23, 29, -22, 55, 3, 55, 17, 55, 18, 31, 29, 14, 35, -2, 31, -13, 23.4887, -24.5771, 16.2658, -29.8024, -9.01428, -32.4151 )
one_way_collision = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -3, -6 )
scale = Vector2( 1.02611, 1 )
polygon = PoolVector2Array( -26.313, -22, -35.084, -13, -38.9822, -2, -40.9313, 8, -36, 18, -23, 29, -22, 55, 3, 55, 17, 55, 18, 31, 29, 14, 35, -2, 31, -13, 23, -25, 11.6946, -27, -7.79642, -29 )
one_way_collision = true

[node name="CoinCount" type="CanvasLayer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="CoinCount"]
position = Vector2( 62, 148 )
scale = Vector2( 8.0625, 7.6875 )
frames = SubResource( 26 )
frame = 1
speed_scale = 3.0
playing = true

[node name="Label" type="Label" parent="CoinCount"]
margin_left = 137.0
margin_top = 104.0
margin_right = 347.0
margin_bottom = 309.0
custom_fonts/font = SubResource( 27 )
text = ": 0
"

[node name="DialogueMenu" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="DialoguePanel" type="Panel" parent="DialogueMenu"]
visible = false
margin_left = 304.0
margin_top = 35.0
margin_right = 820.0
margin_bottom = 187.0
custom_styles/panel = SubResource( 32 )

[node name="Portrait" type="TextureRect" parent="DialogueMenu/DialoguePanel"]
margin_left = 27.0
margin_top = 23.0
margin_right = 128.0
margin_bottom = 125.0
texture = ExtResource( 5 )
expand = true

[node name="Name" type="Label" parent="DialogueMenu/DialoguePanel"]
margin_left = 164.0
margin_top = 29.0
margin_right = 409.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 33 )
text = "placeholder title"

[node name="DialogueBox" type="Label" parent="DialogueMenu/DialoguePanel"]
margin_left = 154.0
margin_top = 74.0
margin_right = 442.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 34 )
text = "placeholder dialogue"
autowrap = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
